--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="wow fadeInLeft boxes-image image-1"></div>
           <div class="wow fadeInRight boxes-content">
-            <h2 class="boxes-h2">LMAO YOOO</h2>
+            <h2 class="boxes-h2">TEKST</h2>
             <p class="boxes-p">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in
               dignissimos quibusdam sapiente quisquam eligendi perferendis, non
@@ -73,7 +73,7 @@
       <div class="flex-container">
         <div class="row">
           <div class="wow fadeInLeft boxes-content">
-            <h2 class="boxes-h2">LMAO YOOO</h2>
+            <h2 class="boxes-h2">TEKST</h2>
             <p class="boxes-p">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in
               dignissimos quibusdam sapiente quisquam eligendi perferendis, non
@@ -90,7 +90,7 @@
         <div class="row">
           <div class="wow fadeInLeft boxes-image image-3"></div>
           <div class="wow fadeInRight boxes-content">
-            <h2 class="boxes-h2">LMAO YOOO</h2>
+            <h2 class="boxes-h2">TEKST</h2>
             <p class="boxes-p">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in
               dignissimos quibusdam sapiente quisquam eligendi perferendis, non
