--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           voluptas dolorem voluptates voluptatibus alias enim dolor. Error optio
           doloribus dignissimos nam facilis in ea, cum dicta non harum cumque?
         </p>
-        <a href="" class="discover-btn">OTKRIJ NAS MENI</a>
+        <a href="menu.html" class="discover-btn">OTKRIJ NAS MENI</a>
       </div>
     </section>
 
