--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
   </head>
 
-  <body class="no-touch">
+  <body>
     <header>
       <div class="header-content">
         <h1 class="header-h1">Cornelius &amp; Cylinder.</h1>
