--- a/index.html
+++ b/index.html
@@ -131,7 +131,16 @@
               <i class="fa fa-star-half-o" aria-hidden="true"></i>
               <p class="inline crta">|</p>
               <i class="fa fa-comment" aria-hidden="true"></i>
-              <p class="inline">374 reviews</p>
+              <p class="inline">
+                408
+                <span
+                  ><a
+                    class="reviews"
+                    href="https://www.google.com/search?ei=hkhoXOWXLK6XlwS8ypH4AQ&q=cornelius+%26+cylinder&oq=cornelius+%26+cylinder&gs_l=psy-ab.3..35i39l2j0l6j0i22i30l2.104.104..907...0.0..0.552.552.5-1......0....1..gws-wiz.......0i71.51lz8BMmUrU#lrd=0x475a7a9fdb7d2a55:0x8787a63d289e96f5,1,,,"
+                    >reviews</a
+                  ></span
+                >
+              </p>
               <h2 class="info-h2">Cornelius &amp; Cylinder</h2>
               <p class="grey-p">restoran / kafe-bar</p>
 
