--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           </li>
           <li class="nav-li"><a class="nav-a" href="menu.html">MENI</a></li>
           <li class="nav-li">
+            <a class="nav-a" href="gallery.html">GALERIJA</a>
+          </li>
+          <li class="nav-li">
             <a class="nav-a click-info" href="index.html#info">LOKACIJA</a>
           </li>
           <li class="nav-li click-info">
