--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Cornelius &amp; Cylinder</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/lightbox.min.css" />
     <link
       href="https://fonts.googleapis.com/css?family=K2D|Merienda+One"
       rel="stylesheet"
@@ -21,34 +22,65 @@
 
   <body>
     <div class="gallery">
-      <a href="/assets/img/bgg1.jpg"
+      <a
+        href="/assets/img/bgg1.jpg"
+        data-lightbox="mygallery"
+        data-title="Title"
         ><img src="/assets/img/bgg1-small.png" alt=""
       /></a>
-      <a href="/assets/img/bgg1.jpg"
+      <a
+        href="/assets/img/bgg1.jpg"
+        data-lightbox="mygallery"
+        data-title="Title"
         ><img src="/assets/img/bgg1-small.png" alt=""
       /></a>
-      <a href="/assets/img/bgg1.jpg"
+      <a
+        href="/assets/img/bgg1.jpg"
+        data-lightbox="mygallery"
+        data-title="Title"
         ><img src="/assets/img/bgg1-small.png" alt=""
       /></a>
-      <a href="/assets/img/bgg1.jpg"
+      <a
+        href="/assets/img/bgg1.jpg"
+        data-lightbox="mygallery"
+        data-title="Title"
         ><img src="/assets/img/bgg1-small.png" alt=""
       /></a>
-      <a href="/assets/img/bgg1.jpg"
+      <a
+        href="/assets/img/bgg1.jpg"
+        data-lightbox="mygallery"
+        data-title="Title"
         ><img src="/assets/img/bgg1-small.png" alt=""
       /></a>
-      <a href="/assets/img/bgg1.jpg"
+      <a
+        href="/assets/img/bgg1.jpg"
+        data-lightbox="mygallery"
+        data-title="Title"
         ><img src="/assets/img/bgg1-small.png" alt=""
       /></a>
-      <a href="/assets/img/bgg1.jpg"
+      <a
+        href="/assets/img/bgg1.jpg"
+        data-lightbox="mygallery"
+        data-title="Title"
         ><img src="/assets/img/bgg1-small.png" alt=""
       /></a>
-      <a href="/assets/img/bgg1.jpg"
+      <a
+        href="/assets/img/bgg1.jpg"
+        data-lightbox="mygallery"
+        data-title="Title"
+        ><img src="/assets/img/bgg1-small.png" alt=""
+      /></a>
+      <a
+        href="/assets/img/bgg1.jpg"
+        data-lightbox="mygallery"
+        data-title="Title"
         ><img src="/assets/img/bgg1-small.png" alt=""
       /></a>
     </div>
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script> -->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
+    <script src="assets/js/lightbox-plus-jquery.min.js"></script>
     <script src="assets/js/anime.min.js"></script>
     <!-- <script type="text/javascript" src="assets/js/wow.js"></script> -->
     <script type="text/javascript" src="assets/js/app.js"></script>
