--- a/gallery.html
+++ b/gallery.html
@@ -22,60 +22,57 @@
 
   <body>
     <div class="gallery">
-      <a
-        href="/assets/img/bgg1.jpg"
-        data-lightbox="mygallery"
-        data-title="Title"
-        ><img src="/assets/img/bgg1-small.png" alt=""
-      /></a>
-      <a
-        href="/assets/img/bgg1.jpg"
-        data-lightbox="mygallery"
-        data-title="Title"
-        ><img src="/assets/img/bgg1-small.png" alt=""
-      /></a>
-      <a
-        href="/assets/img/bgg1.jpg"
-        data-lightbox="mygallery"
-        data-title="Title"
-        ><img src="/assets/img/bgg1-small.png" alt=""
-      /></a>
-      <a
-        href="/assets/img/bgg1.jpg"
-        data-lightbox="mygallery"
-        data-title="Title"
-        ><img src="/assets/img/bgg1-small.png" alt=""
-      /></a>
-      <a
-        href="/assets/img/bgg1.jpg"
-        data-lightbox="mygallery"
-        data-title="Title"
-        ><img src="/assets/img/bgg1-small.png" alt=""
-      /></a>
-      <a
-        href="/assets/img/bgg1.jpg"
-        data-lightbox="mygallery"
-        data-title="Title"
-        ><img src="/assets/img/bgg1-small.png" alt=""
-      /></a>
-      <a
-        href="/assets/img/bgg1.jpg"
-        data-lightbox="mygallery"
-        data-title="Title"
-        ><img src="/assets/img/bgg1-small.png" alt=""
-      /></a>
-      <a
-        href="/assets/img/bgg1.jpg"
-        data-lightbox="mygallery"
-        data-title="Title"
-        ><img src="/assets/img/bgg1-small.png" alt=""
-      /></a>
-      <a
-        href="/assets/img/bgg1.jpg"
-        data-lightbox="mygallery"
-        data-title="Title"
-        ><img src="/assets/img/bgg1-small.png" alt=""
-      /></a>
+      <div class="gallery-container">
+        <a
+          href="/assets/img/bgg1.jpg"
+          data-lightbox="mygallery"
+          data-title="Title"
+          ><img src="/assets/img/bgg1-small.png" alt=""
+        /></a>
+        <a
+          href="/assets/img/bgg1.jpg"
+          data-lightbox="mygallery"
+          data-title="Title"
+          ><img src="/assets/img/bgg1-small.png" alt=""
+        /></a>
+        <a
+          href="/assets/img/bgg1.jpg"
+          data-lightbox="mygallery"
+          data-title="Title"
+          ><img src="/assets/img/bgg1-small.png" alt=""
+        /></a>
+        <a
+          href="/assets/img/bgg1.jpg"
+          data-lightbox="mygallery"
+          data-title="Title"
+          ><img src="/assets/img/bgg1-small.png" alt=""
+        /></a>
+
+        <a
+          href="/assets/img/bgg1.jpg"
+          data-lightbox="mygallery"
+          data-title="Title"
+          ><img src="/assets/img/bgg1-small.png" alt=""
+        /></a>
+        <a
+          href="/assets/img/bgg1.jpg"
+          data-lightbox="mygallery"
+          data-title="Title"
+          ><img src="/assets/img/bgg1-small.png" alt=""
+        /></a>
+        <a
+          href="/assets/img/bgg1.jpg"
+          data-lightbox="mygallery"
+          data-title="Title"
+          ><img src="/assets/img/bgg1-small.png" alt=""
+        /></a>
+        <a
+          href="/assets/img/bgg1.jpg"
+          data-lightbox="mygallery"
+          data-title="Title"
+          ><img src="/assets/img/bgg1-small.png" alt=""
+        /></a>
+      </div>
     </div>
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script> -->
