--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
     <ul class="nav-links">
       <li class="nav-li"><a class="nav-a" href="index.html">NASLOVNA</a></li>
       <li class="nav-li"><a class="nav-a" href="">O NAMA</a></li>
-      <li class="nav-li"><a class="nav-a" href="">LOKACIJA</a></li>
+      <li class="nav-li"><a class="nav-a" href="">GALERIJA</a></li>
       <li class="nav-li"><a class="nav-a" href="">KONTAKT</a></li>
     </ul>
 
