--- a/gallery.html
+++ b/gallery.html
@@ -21,66 +21,168 @@
   </head>
 
   <body>
-    <div class="gallery">
-      <div class="gallery-container">
-        <a
-          href="/assets/img/bgg1.jpg"
-          data-lightbox="mygallery"
-          data-title="Title"
-          ><img src="/assets/img/bgg1-small.png" alt=""
-        /></a>
-        <a
-          href="/assets/img/bgg1.jpg"
-          data-lightbox="mygallery"
-          data-title="Title"
-          ><img src="/assets/img/bgg1-small.png" alt=""
-        /></a>
-        <a
-          href="/assets/img/bgg1.jpg"
-          data-lightbox="mygallery"
-          data-title="Title"
-          ><img src="/assets/img/bgg1-small.png" alt=""
-        /></a>
-        <a
-          href="/assets/img/bgg1.jpg"
-          data-lightbox="mygallery"
-          data-title="Title"
-          ><img src="/assets/img/bgg1-small.png" alt=""
-        /></a>
+    <nav class="menu-nav">
+      <div class="logo menu-logo">
+        <img src="assets/img/logo-krug.png" alt="" />
+      </div>
 
-        <a
-          href="/assets/img/bgg1.jpg"
-          data-lightbox="mygallery"
-          data-title="Title"
-          ><img src="/assets/img/bgg1-small.png" alt=""
-        /></a>
-        <a
-          href="/assets/img/bgg1.jpg"
-          data-lightbox="mygallery"
-          data-title="Title"
-          ><img src="/assets/img/bgg1-small.png" alt=""
-        /></a>
-        <a
-          href="/assets/img/bgg1.jpg"
-          data-lightbox="mygallery"
-          data-title="Title"
-          ><img src="/assets/img/bgg1-small.png" alt=""
-        /></a>
-        <a
-          href="/assets/img/bgg1.jpg"
-          data-lightbox="mygallery"
-          data-title="Title"
-          ><img src="/assets/img/bgg1-small.png" alt=""
-        /></a>
+      <ul class="nav-links">
+        <li class="nav-li"><a class="nav-a" href="index.html">NASLOVNA</a></li>
+        <li class="nav-li"><a class="nav-a" href="">O NAMA</a></li>
+        <li class="nav-li"><a class="nav-a" href="">MENI</a></li>
+        <li class="nav-li"><a class="nav-a" href="">KONTAKT</a></li>
+      </ul>
+
+      <div class="burger menu-burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+
+    <div class="gallery">
+      <div class="menu-image">
+        <h2 class="image-h2">INTERIOR</h2>
+      </div>
+      <div class="gallery-divider">
+        <!-- <h2 class="gallery-heading">INTERIOR</h2> -->
+        <div class="gallery-container">
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bg.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bg-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+        </div>
+      </div>
+
+      <div class="menu-image">
+        <h2 class="image-h2">FOOD & DRINKS</h2>
+      </div>
+      <div class="gallery-divider">
+        <!-- <h2 class="gallery-heading food-heading">FOOD & DRINKS</h2> -->
+        <div class="gallery-container">
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+          <a
+            href="/assets/img/bgg1.jpg"
+            data-lightbox="mygallery"
+            data-title="Title"
+            ><img src="/assets/img/bgg1-small.png" alt=""
+          /></a>
+        </div>
       </div>
     </div>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script> -->
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/lightbox-plus-jquery.min.js"></script>
+    <footer>
+      <div class="footer-logos">
+        <a class="footer-a" href="https://www.facebook.com/cornelius.cylinder/"
+          ><i class="fa fa-facebook-official" aria-hidden="true"></i
+        ></a>
+        <a class="footer-a" href="https://twitter.com/cornelinder"
+          ><i class="fa fa-twitter" aria-hidden="true"></i
+        ></a>
+        <a class="footer-a" href="https://www.instagram.com/cornelius_cylinder/"
+          ><i class="fa fa-instagram" aria-hidden="true"></i
+        ></a>
+        <a
+          class="footer-a"
+          href="https://www.youtube.com/channel/UCFRDbxUN5TCokmgwxwPdrXg"
+          ><i class="fa fa-youtube-play" aria-hidden="true"></i
+        ></a>
+
+        <p class="footer-p">Cornelius &amp; Cylinder &copy; 2019.</p>
+      </div>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script src="assets/js/anime.min.js"></script>
-    <!-- <script type="text/javascript" src="assets/js/wow.js"></script> -->
+    <script src="assets/js/lightbox-plus-jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/wow.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
-    <!-- <script type="text/javascript" src="assets/js/anime.js"></script> -->
   </body>
 </html>
