--- a/menu.html
+++ b/menu.html
@@ -18,8 +18,8 @@
     <ul class="nav-links">
       <li class="nav-li"><a class="nav-a" href="index.html">NASLOVNA</a></li>
       <li class="nav-li"><a class="nav-a" href="">O NAMA</a></li>
-      <li class="nav-li"><a class="nav-a" href="">GALERIJA</a></li>
-      <li class="nav-li"><a class="nav-a" href="">KONTAKT</a></li>
+      <li class="nav-li"><a class="nav-a" href="gallery.html">GALERIJA</a></li>
+      <li class="nav-li"><a class="nav-a" href="index.html#info">KONTAKT</a></li>
     </ul>
 
     <div class="burger menu-burger">
