--- a/gallery.html
+++ b/gallery.html
@@ -29,8 +29,10 @@
       <ul class="nav-links">
         <li class="nav-li"><a class="nav-a" href="index.html">NASLOVNA</a></li>
         <li class="nav-li"><a class="nav-a" href="">O NAMA</a></li>
-        <li class="nav-li"><a class="nav-a" href="">MENI</a></li>
-        <li class="nav-li"><a class="nav-a" href="">KONTAKT</a></li>
+        <li class="nav-li"><a class="nav-a" href="menu.html">MENI</a></li>
+        <li class="nav-li">
+          <a class="nav-a" href="index.html#info">KONTAKT</a>
+        </li>
       </ul>
 
       <div class="burger menu-burger">
