--- a/gallery.html
+++ b/gallery.html
@@ -50,28 +50,28 @@
         <!-- <h2 class="gallery-heading">INTERIOR</h2> -->
         <div class="gallery-container">
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/image00001.jpeg"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/image00001-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bg.jpg"
+            href="/assets/img/image00002.jpeg"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bg-small.png" alt=""
+            ><img src="/assets/img/image00002-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/image00003.jpeg"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/image00003-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/image00007.png"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/image00007-small.png" alt=""
           /></a>
 
           <a
