--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
   <body>
     <header>
       <div class="header-content">
-        <a href="#eng" data-reload>English</a>
-        <a href="#rs" data-reload>Srpski</a>
+        <!-- <a href="#eng" data-reload>English</a> -->
+        <a href="#eng" class="header-btn" data-reload>ENGLISH</a>
+        <!-- <a href="#rs" data-reload>Srpski</a> -->
+        <a href="#rs" class="header-btn" data-reload>SRPSKI</a>
 
         <h1 class="header-h1">Cornelius &amp; Cylinder.</h1>
         <p class="header-p">
@@ -205,6 +207,6 @@
     <script src="assets/js/anime.min.js"></script>
     <!-- <script type="text/javascript" src="assets/js/wow.js"></script> -->
     <script type="text/javascript" src="assets/js/app.js"></script>
-    <script type="text/javascript" src="assets/js/anime.js"></script>
+    <!-- <script type="text/javascript" src="assets/js/anime.js"></script> -->
   </body>
 </html>
