--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
             ></iframe>
           </div>
 
-          <a href="index.html#eng" class="header-btn" data-reload>ENGLISH</a>
-          <a href="index.html#rs" class="header-btn" data-reload>SRPSKI</a>
+          <a href="#eng" class="header-btn" data-reload>ENGLISH</a>
+          <a href="#rs" class="header-btn" data-reload>SRPSKI</a>
         </div>
       </div>
     </section>
