--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
               >KONTAKT</a
             >
           </li>
+          <ul>
+            <li class="nav-li li-flag">
+              <a href="#eng" data-reload>
+                <span
+                  ><img class="flag" src="assets/img/flag-gb.png" alt=""/></span
+              ></a>
+            </li>
+            <li class="nav-li li-flag">
+              <a href="#rs" data-reload
+                ><span
+                  ><img class="flag" src="assets/img/flag-rs.png" alt=""/></span
+              ></a>
+            </li>
+          </ul>
         </ul>
 
         <div class="burger">
@@ -196,9 +210,6 @@
               allowfullscreen
             ></iframe>
           </div>
-
-          <a href="#eng" class="header-btn" data-reload>ENGLISH</a>
-          <a href="#rs" class="header-btn" data-reload>SRPSKI</a>
         </div>
       </div>
     </section>
