--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
   <body>
     <header>
       <div class="header-content">
-        <!-- <a href="#eng" data-reload>English</a> -->
-        <!-- <a href="#rs" data-reload>Srpski</a> -->
-
         <h1 class="header-h1">Cornelius &amp; Cylinder.</h1>
         <p class="header-p">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit.
         </p>
-        <a id="lang-more" href="#" class="header-btn">VISE</a>
+        <a id="lang-more" href="index.html#boxes" class="header-btn click-boxes"
+          >VISE</a
+        >
         <a href="index.html#boxes" class="header-btn arrow-btn click-boxes"
           ><i class="arrow fa fa-long-arrow-right" aria-hidden="true"></i
         ></a>
