--- a/menu.html
+++ b/menu.html
@@ -60,6 +60,10 @@
       <h2 class="image-h2 mainDishes">GLAVNA JELA</h2>
     </div>
     <div class="menu-container">
+      <div class="menu-nav-go">
+        <a href="#" class="menu-nav-a menu-nav-a-on">RESTORAN</a>
+        <a href="menu-caffe.html" class="menu-nav-a">KAFE-BAR</a>
+      </div>
       <h2 class="menu-h2 mainDishes">GLAVNA JELA</h2>
       <div class="menu-row">
         <div class="col">
