--- a/menu-caffe.html
+++ b/menu-caffe.html
@@ -56,15 +56,15 @@
   </nav>
 
   <section class="menu">
-    <div class="menu-image">
-      <h2 class="image-h2 mainDishes">GLAVNA JELA</h2>
+    <div class="menu-image menu-image-beer">
+      <h2 class="image-h2 mainDishes">PIVA</h2>
     </div>
     <div class="menu-container">
       <div class="menu-nav-go">
         <a href="#" class="menu-nav-a menu-nav-a-on">KAFE-BAR</a>
         <a href="menu.html" class="menu-nav-a">RESTORAN</a>
       </div>
-      <h2 class="menu-h2 mainDishes">GLAVNA JELA</h2>
+      <h2 class="menu-h2 mainDishes">PIVA</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
@@ -201,11 +201,11 @@
   </section>
 
   <section class="menu">
-    <div class="menu-image">
-      <h2 class="image-h2">NESTO IZMEDJU</h2>
+    <div class="menu-image menu-image-coffee">
+      <h2 class="image-h2">KAFA</h2>
     </div>
     <div class="menu-container">
-      <h2 class="menu-h2">NESTO IZMEDJU</h2>
+      <h2 class="menu-h2">KAFA</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
