--- a/index.html
+++ b/index.html
@@ -132,13 +132,24 @@
 
     <section id="discover">
       <div class="discover-content">
-        <h2 class="discover-h2">NASA HRANA</h2>
+        <div class="discover-item discover-food">
+        <h2 class="discover-h2">RESTORAN</h2>
         <p class="discover-p">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolores
           voluptas dolorem voluptates voluptatibus alias enim dolor. Error optio
           doloribus dignissimos nam facilis in ea, cum dicta non harum cumque?
         </p>
         <a href="menu.html" class="discover-btn">OTKRIJ NAS MENI</a>
+      </div>
+      <div class="discover-item discover-drinks">
+          <h2 class="discover-h2">KAFE-BAR</h2>
+          <p class="discover-p">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolores
+            voluptas dolorem voluptates voluptatibus alias enim dolor. Error optio
+            doloribus dignissimos nam facilis in ea, cum dicta non harum cumque?
+          </p>
+          <a href="menu.html" class="discover-btn">KARTA PICA</a>
+        </div>
       </div>
     </section>
 
