--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="header-content">
         <h1 class="header-h1">Cornelius &amp; Cylinder.</h1>
         <p class="header-p">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Prvi i jedini Steam Punk restoran u Srbiji.
         </p>
         <a id="lang-more" href="index.html#boxes" class="header-btn click-boxes"
           >VISE</a
