--- a/index.html
+++ b/index.html
@@ -226,6 +226,19 @@
       </div>
     </section>
 
+    <footer>
+      <div class="footer-logos">
+        <a class="footer-a" href="https://www.facebook.com/cornelius.cylinder/"><i class="fa fa-facebook-official"
+            aria-hidden="true"></i></a>
+        <a class="footer-a" href="https://twitter.com/cornelinder"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a class="footer-a" href="https://www.instagram.com/cornelius_cylinder/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a class="footer-a" href="https://www.youtube.com/channel/UCFRDbxUN5TCokmgwxwPdrXg"><i class="fa fa-youtube-play"
+            aria-hidden="true"></i></a>
+  
+        <p class="footer-p">Cornelius &amp; Cylinder &copy; 2019.</p>
+      </div>
+    </footer>
+
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script> -->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <!-- <script src="assets/js/anime.min.js"></script> -->
