--- a/menu-caffe.html
+++ b/menu-caffe.html
@@ -621,12 +621,22 @@
 
   <footer>
     <div class="footer-logos">
-      <a class="footer-a" href="https://www.facebook.com/cornelius.cylinder/"><i class="fa fa-facebook-official"
-          aria-hidden="true"></i></a>
-      <a class="footer-a" href="https://twitter.com/cornelinder"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-      <a class="footer-a" href="https://www.instagram.com/cornelius_cylinder/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-      <a class="footer-a" href="https://www.youtube.com/channel/UCFRDbxUN5TCokmgwxwPdrXg"><i class="fa fa-youtube-play"
-          aria-hidden="true"></i></a>
+      <a class="footer-a" href="https://www.facebook.com/cornelius.cylinder/"
+        ><i class="fa fa-facebook-official" aria-hidden="true"></i
+      ></a>
+      <a
+        class="footer-a"
+        href="https://www.tripadvisor.com/Attraction_Review-g294472-d13219305-Reviews-Cornelius_Cylinder-Belgrade.html"
+        ><i class="fa fa-tripadvisor" aria-hidden="true"></i
+      ></a>
+      <a class="footer-a" href="https://twitter.com/cornelinder"
+        ><i class="fa fa-twitter" aria-hidden="true"></i
+      ></a>
+      <a class="footer-a" href="https://www.instagram.com/cornelius_cylinder/"
+        ><i class="fa fa-instagram" aria-hidden="true"></i
+      ></a>
+      <!-- <a class="footer-a" href="https://www.youtube.com/channel/UCFRDbxUN5TCokmgwxwPdrXg"><i class="fa fa-youtube-play"
+          aria-hidden="true"></i></a> -->
 
       <p class="footer-p">Cornelius &amp; Cylinder &copy; 2019.</p>
     </div>
