--- a/index.html
+++ b/index.html
@@ -128,25 +128,25 @@
       </div>
     </section>
 
-    
-
     <section id="discover">
       <div class="discover-content">
         <div class="discover-item discover-food">
-        <h2 class="discover-h2">RESTORAN</h2>
-        <p class="discover-p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolores
-          voluptas dolorem voluptates voluptatibus alias enim dolor. Error optio
-          doloribus dignissimos nam facilis in ea, cum dicta non harum cumque?
-        </p>
-        <a href="menu.html" class="discover-btn">OTKRIJ NAS MENI</a>
-      </div>
-      <div class="discover-item discover-drinks">
+          <h2 class="discover-h2">RESTORAN</h2>
+          <p class="discover-p">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolores
+            voluptas dolorem voluptates voluptatibus alias enim dolor. Error
+            optio doloribus dignissimos nam facilis in ea, cum dicta non harum
+            cumque?
+          </p>
+          <a href="menu.html" class="discover-btn">OTKRIJ NAS MENI</a>
+        </div>
+        <div class="discover-item discover-drinks">
           <h2 class="discover-h2">KAFE-BAR</h2>
           <p class="discover-p">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolores
-            voluptas dolorem voluptates voluptatibus alias enim dolor. Error optio
-            doloribus dignissimos nam facilis in ea, cum dicta non harum cumque?
+            voluptas dolorem voluptates voluptatibus alias enim dolor. Error
+            optio doloribus dignissimos nam facilis in ea, cum dicta non harum
+            cumque?
           </p>
           <a href="menu.html" class="discover-btn">KARTA PICA</a>
         </div>
@@ -228,14 +228,23 @@
 
     <footer>
       <div class="footer-logos">
-        <a class="footer-a" href="https://www.facebook.com/cornelius.cylinder/"><i class="fa fa-facebook-official"
-            aria-hidden="true"></i></a>
-            <a class="footer-a" href="https://www.tripadvisor.com/Attraction_Review-g294472-d13219305-Reviews-Cornelius_Cylinder-Belgrade.html"><i class="fa fa-tripadvisor" aria-hidden="true"></i></a>
-        <a class="footer-a" href="https://twitter.com/cornelinder"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a class="footer-a" href="https://www.instagram.com/cornelius_cylinder/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a class="footer-a" href="https://www.facebook.com/cornelius.cylinder/"
+          ><i class="fa fa-facebook-official" aria-hidden="true"></i
+        ></a>
+        <a
+          class="footer-a"
+          href="https://www.tripadvisor.com/Attraction_Review-g294472-d13219305-Reviews-Cornelius_Cylinder-Belgrade.html"
+          ><i class="fa fa-tripadvisor" aria-hidden="true"></i
+        ></a>
+        <a class="footer-a" href="https://twitter.com/cornelinder"
+          ><i class="fa fa-twitter" aria-hidden="true"></i
+        ></a>
+        <a class="footer-a" href="https://www.instagram.com/cornelius_cylinder/"
+          ><i class="fa fa-instagram" aria-hidden="true"></i
+        ></a>
         <!-- <a class="footer-a" href="https://www.youtube.com/channel/UCFRDbxUN5TCokmgwxwPdrXg"><i class="fa fa-youtube-play"
             aria-hidden="true"></i></a> -->
-  
+
         <p class="footer-p">Cornelius &amp; Cylinder &copy; 2019.</p>
       </div>
     </footer>
