--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <section id="info">
       <div class="flex-container">
         <div class="info-row">
-          <div class="wow fadeInDown info-content">
+          <div class="info-content">
             <div class="info-text">
               <p class="inline">4.7</p>
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -251,9 +251,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/anime.min.js"></script>
+    <!-- <script src="assets/js/anime.min.js"></script> -->
     <script type="text/javascript" src="assets/js/wow.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
-    <script type="text/javascript" src="assets/js/anime.js"></script>
+    <!-- <script type="text/javascript" src="assets/js/anime.js"></script> -->
   </body>
 </html>
