--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               sit temporibus quaerat ab, totam, nemo dolore aut modi quam culpa
               nihil a!
             </p>
-            <a href="#" class="boxes-btn">PROCITAJ VISE</a>
+            <a href="about.html" class="boxes-btn">PROCITAJ VISE</a>
           </div>
         </div>
       </div>
