--- a/gallery.html
+++ b/gallery.html
@@ -27,12 +27,32 @@
       </div>
 
       <ul class="nav-links">
-        <li class="nav-li"><a class="nav-a" href="index.html">NASLOVNA</a></li>
-        <li class="nav-li"><a class="nav-a" href="">O NAMA</a></li>
-        <li class="nav-li"><a class="nav-a" href="menu.html">MENI</a></li>
         <li class="nav-li">
-          <a class="nav-a" href="index.html#info">KONTAKT</a>
+          <a id="lang-main" class="nav-a" href="index.html">NASLOVNA</a>
         </li>
+        <li class="nav-li">
+          <a id="lang-about" class="nav-a" href="about.html">O NAMA</a>
+        </li>
+        <li class="nav-li">
+          <a id="lang-gallery" class="nav-a" href="menu.html">MENI</a>
+        </li>
+        <li class="nav-li click-info">
+          <a id="lang-contact" class="nav-a" href="index.html#info">KONTAKT</a>
+        </li>
+        <ul>
+          <li class="nav-li li-flag">
+            <a href="#eng" data-reload>
+              <span
+                ><img class="flag" src="assets/img/flag-gb.png" alt=""/></span
+            ></a>
+          </li>
+          <li class="nav-li li-flag">
+            <a href="#rs" data-reload
+              ><span
+                ><img class="flag" src="assets/img/flag-rs.png" alt=""/></span
+            ></a>
+          </li>
+        </ul>
       </ul>
 
       <div class="burger menu-burger">
