--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,10 @@
   <meta charset="utf-8" />
   <title>Cornelius &amp; Cylinder</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
-  <link href="https://fonts.googleapis.com/css?family=K2D:300,400,700" rel="stylesheet" />
+  <link
+      href="https://fonts.googleapis.com/css?family=K2D|Merienda+One"
+      rel="stylesheet"
+    />
   <link rel="stylesheet" href="assets/css/animate.css" />
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
