--- a/about.html
+++ b/about.html
@@ -85,7 +85,32 @@
             praesentium adipisci enim, maiores aut consequatur error, odit
             laborum voluptas.
           </p>
-          <div class="abs-img"></div>
+          <!-- <div class="abs-img"></div> -->
+        </div>
+      </div>
+
+      <div class="flex-about">
+        <div class="about-container">
+          <div class="about-image about-img-half"></div>
+          <div class="about-content">
+            <h2 class="about-h2">OUR STORY</h2>
+            <p class="about-p">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              omnis harum eos eius quasi aperiam distinctio, mollitia modi
+              placeat quibusdam blanditiis illum est sapiente beatae fugiat quo
+              repudiandae ipsam molestias? Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Magnam necessitatibus magni vitae,
+              fugiat sed eaque autem facilis laborum delectus quod. Accusamus,
+              nihil. Magni enim numquam delectus, et libero sed recusandae.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat,
+              vel quam sint cum consequatur tempore est libero provident itaque.
+              Ipsa sed modi magni vel porro aspernatur optio debitis? Saepe,
+              consectetur. Lorem ipsum dolor sit amet, consectetur adipisicing
+              elit. Iure quae fugit unde. Inventore blanditiis reprehenderit
+              repellat. Veniam earum, illum est praesentium adipisci enim,
+              maiores aut consequatur error, odit laborum voluptas.
+            </p>
+          </div>
         </div>
       </div>
     </section>
